java/java-tests/testData/codeInsight/daemonCodeAnalyzer/annotations/cannotFindMethod.java
@interface Ann {
    int u () default 0;
}

@Ann(<error descr="Cannot find @interface method 'v()'">v=0</error>) class D {
}
